[package]
name = "zlog_client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde_derive = "1.0.136"
serde = { version = "1.0.136", features = ["derive"] }

config = {path = "./config"}