[package]
name = "zlog_client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["compat"] }
tokio = { version = "1", features = ["full"] }

config = {path = "./config"}
kernel = {path = "./kernel"}
datadriven = {path = "./datadriven"}
